# hwcomponents-adc

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
hwcomponents_adc/: __init__.py  _version.py  main.py  model.py
