[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents-adc"
version = "0.1"
description = "A package for estimating the energy and area of Analog-Digital Converters"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tanner Andrulis", email = "Andrulis@mit.edu"}
]
keywords = ["accelerator", "hardware", "energy", "estimation", "analog", "adc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "PyYAML",
    "numpy",
    "pandas",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true
py-modules = ["hwcomponents_adc"]

[tool.setuptools.package-data]
hwcomponents_adc = [
    "adc_data/model.yaml",
]
